rbac-best-practices-vpol/restrict-clusterrole-nodesproxy/e2e/policy-assert.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: restrict-clusterrole-nodesproxy
spec:
  validationActions:
    - Audit
