rbac-best-practices-vpol/restrict-clusterrole-nodesproxy/e2e/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-clusterrole-nodesproxy-policy
spec:
  steps:
  - name: test-restrict-clusterrole-nodesproxy
    try:
    - apply:
        file: ../restrict-clusterrole-nodesproxy.yaml
    - assert:
        file: policy-assert.yaml
    - script:
        content: |
          kubectl patch validatingpolicy restrict-clusterrole-nodesproxy --type=json -p='[{"op": "replace", "path": "/spec/validationActions", "value": ["Deny"]}]'
    - assert:
        file: enforce-policy-assert.yaml
    - apply:
        file: good-resource.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-resource.yaml
